--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -7313,6 +7313,17 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2015.05.01}
 }
 
+@article{Rabosky2015,
+  title={Model inadequacy and mistaken inferences of trait-dependent speciation},
+  author={Rabosky, Daniel L and Goldberg, Emma E},
+  journal={Systematic Biology},
+  volume={64},
+  number={2},
+  pages={340--355},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
 @Article{Raftery1992,
   Title                    = {{How many iterations in the Gibbs sampler}},
   Author                   = {Raftery, A.E. and Lewis, S.},
