--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -840,6 +840,18 @@ A clock-constrained Bayesian MCMC software.},
   Timestamp                = {2008.05.28}
 }
 
+@Article{Bokma2002,
+  Title                    = {Detection of punctuated equilibrium from molecular phylogenies},
+  Author                   = {Bokma, F},
+  Journal                  = {{Journal of Evolutionary Biology}},
+  Year                     = {2002},
+  Number                   = {6},
+  Pages                    = {1048--1056},
+  Volume                   = {15},
+
+  Publisher                = {Wiley Online Library}
+}
+
 @Article{Bokma2009,
   Title                    = {{Problems detecting density-dependent diversification on phylogenies}},
   Author                   = {Bokma, F.},
