data and script files for SSE tutorial

--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial_content_intro.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial_content_intro.tex
@@ -62,11 +62,17 @@ In the \cl{data} folder, you will find the following files:
         A set of several discrete-valued characters. % from where?
         The characters are described in the file \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_morph_description.txt}{primates\_morph\_description.txt}.
 
+    \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_biogeo.tre}{primates\_biogeo.tre}: 
+        A dated phylogeny of the 23 primate species. % from M. Landis' biogeo DEC tutorial, not sure where he got it from...
+    
+    \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_biogeo.tsv}{primates\_biogeo.tsv}:
+        Biogeographic range data for 23 primate species.
+
 \end{itemize}
 
-\impmark{Open the tree \cl{data/primates\_tree.nex} in FigTree.}
+\impmark{Open the tree files \cl{primates\_tree.nex} and \cl{primates\_biogeo.tre} in FigTree.}
 
-\impmark{Open the character data file \cl{data/primates\_morph.nex} in a text editor.}
+\impmark{Open the character data files \cl{primates\_morph.nex} and \cl{primates\_biogeo.tsv} in a text editor.}
 
 \newpage
 
