tiny classe text edits

--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -5709,6 +5709,17 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2013.10.14}
 }
 
+@Article{Maddison2015,
+  Title   = {The Unsolved Challenge to Phylogenetic Correlation Tests for Categorical Characters},
+  Author  = {Maddison, Wayne P. and FitzJohn, Richard G.},
+  Journal = SYSBIO,
+  Volume  = {64},
+  Number  = {1},
+  Year    = {2015},
+  Pages   = {127--136},
+  doi     = {10.1093/sysbio/syu070},
+}
+
 @Article{Magee2014,
   Title                    = {The Dawn of Open Access to Phylogenetic Data},
   Author                   = {Magee, Andrew F. AND May, Michael R. AND Moore, Brian R.},
